Uploaded wrong version, this is correct

--- a/javascript/palindrome-checker/index.html
+++ b/javascript/palindrome-checker/index.html
@@ -20,7 +20,7 @@
     <main>
       <h1>Is it a Palindrome?</h1>
       <section id="checker">
-        <p>Enter in text to check for a palindrome:</p>
+        <p id="checker-text">Enter in text to check for a palindrome:</p>
         <div id="entry">
           <input id="text-input" type="text" />
           <button type="button" id="check-btn">Check</button>
